src/objects/Apttus_Billing__CreditMemo__c/fields/APTS_Integration_Method__c.field-meta.xml
<CustomField>
    <fullName>APTS_Integration_Method__c</fullName>
    <description>Type of Integration Request (Credit Memo Request).</description>
    <label>Integration Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Credit Memo Request</fullName>
            </value>
            <value>
                <fullName>Simulate Order</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>