src/objects/Apttus_Billing__CreditMemo__c/fields/APTS_Integration_Requested__c.field-meta.xml
<CustomField>
    <fullName>APTS_Integration_Requested__c</fullName>
    <label>Integration Requested</label>
    <type>DateTime</type>
</CustomField>