src/objects/Apttus_Billing__CreditMemo__c/fields/APTS_Integration_Status__c.field-meta.xml
<CustomField>
    <fullName>APTS_Integration_Status__c</fullName>
    <description>Status field of Integration Request.</description>
    <label>Integration Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Received by External System</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>To be Processed</fullName>
            </value>
            <value>
                <fullName>Requested</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>