src/objects/Apttus_Billing__CreditMemo__c/fields/Apttus_Billing__BillToAccountId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__BillToAccountId__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Bill To address on the associated Account.</description>
    <inlineHelpText>The Bill To address on the associated Account.</inlineHelpText>
    <label>Bill To</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Credit Memos</relationshipLabel>
    <relationshipName>CreditMemos</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>