src/objects/Apttus_Billing__CreditMemo__c/fields/Apttus_Billing__CreditAmount__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__CreditAmount__c</fullName>
    <description>The total amount to set off against a balance from invoice or other transactions.</description>
    <inlineHelpText>Amount to set off against a balance from invoice or other transactions.</inlineHelpText>
    <label>Credit Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>