src/objects/Apttus_Billing__CreditMemo__c/fields/Apttus_Billing__InvoiceID__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__InvoiceID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Invoice ID for which the Credit Memo is created.</description>
    <inlineHelpText>Invoice ID for which this Credit Memo is created.</inlineHelpText>
    <label>Invoice</label>
    <referenceTo>Apttus_Billing__Invoice__c</referenceTo>
    <relationshipLabel>Credit Memos</relationshipLabel>
    <relationshipName>CreditMemos</relationshipName>
    <type>Lookup</type>
</CustomField>