src/objects/Apttus_Billing__CreditMemo__c/validationRules/Restrict_credit_amount_change.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_credit_amount_change</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED( Apttus_Billing__CreditAmount__c )</errorConditionFormula>
    <errorMessage>You don&apos;t have access to modify Credit Amount</errorMessage>
</ValidationRule>