src/objects/Apttus_Billing__CreditMemo__c/validationRules/Restrict_Credit_Amount_Zero.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Credit_Amount_Zero</fullName>
    <active>true</active>
    <errorConditionFormula>Apttus_Billing__TotalCreditAmount__c  = 0</errorConditionFormula>
    <errorMessage>Credit Amount Should be greater than zero</errorMessage>
</ValidationRule>