src/objects/Apttus_Billing__CreditMemo__c/listViews/Approved_Creditmemos.listView-meta.xml
<ListView>
    <fullName>Approved_Creditmemos</fullName>
    <columns>NAME</columns>
    <columns>Apttus_Billing__Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Apttus_Billing__Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </filters>
    <label>Approved Creditmemos</label>
    <language>en_US</language>
</ListView>