src/objects/Apttus_Billing__CreditMemo__c/listViews/Apttus_Billing__All.listView-meta.xml
<ListView>
    <fullName>Apttus_Billing__All</fullName>
    <columns>NAME</columns>
    <columns>Apttus_Billing__CreditMemoDate__c</columns>
    <columns>Apttus_Billing__BillToAccountId__c</columns>
    <columns>Apttus_Billing__CreditAmount__c</columns>
    <columns>Apttus_Billing__Status__c</columns>
    <columns>Apttus_Billing__DeliveryStatus__c</columns>
    <columns>APTS_ACAT_Number__c</columns>
    <columns>Apttus_Billing__InvoiceID__c</columns>
    <columns>APTS_CMR_Number__c</columns>
    <columns>APTS_Integration_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>